WHITE-PAPER/reviewers/packages/v3/workshop/PACKAGE_MANIFEST.md
# Review Package: WORKSHOP

**Generated:** 2025-12-26 02:07:56
**Target Venue:** NeurIPS/AAAI Workshop
**Total Size:** 2.5 MB
**Total Files:** 16

---

## Description

Workshop paper package (4-8 pages, focused claims)

---

## Reading Order

Start with these files in order:

1. `submissions/workshop/README.md`
2. `submissions/blueprints/WORKSHOP_BLUEPRINT.md`
3. `theory/MINIMUM_PUBLISHABLE_CLAIMS.md`
4. `guides/summary_statistics.md`

---

## Contents

| Category | Files | Size |
|----------|-------|------|
| submissions/ | 8 files | 2.4 MB |
| blueprints/ | 1 files | 6.0 KB |
| theory/ | 1 files | 10.1 KB |
| guides/ | 1 files | 11.5 KB |
| figures/ | 2 files | 20.0 KB |
| planning/ | 3 files | 33.1 KB |

**Total:** 16 files, 2.5 MB

---

## File Listing

### submissions/

- `submissions\workshop\Nyquist_workshop_paper_FINAL.html` (2.4 MB)
- `submissions\workshop\Nyquist_workshop_paper_FINAL.md` (16.6 KB)
- `submissions\workshop\poster_layout.md` (10.9 KB)
- `submissions\workshop\README.md` (6.4 KB)
- `submissions\workshop\table_workshop_protocol.md` (4.7 KB)
- `submissions\workshop\table_workshop_results.md` (2.1 KB)
- `submissions\workshop\workshop_slides_outline.md` (4.9 KB)
- `submissions\workshop\workshop_supplementary.md` (4.6 KB)

### blueprints/

- `submissions\blueprints\WORKSHOP_BLUEPRINT.md` (6.0 KB)

### theory/

- `theory\MINIMUM_PUBLISHABLE_CLAIMS.md` (10.1 KB)

### guides/

- `guides\summary_statistics.md` (11.5 KB)

### figures/

- `figures\ascii\ascii_workshop_abstract.md` (10.0 KB)
- `figures\ascii\ascii_workshop_contributions.md` (10.0 KB)

### planning/

- `planning\METHODOLOGY_DOMAINS.md` (1.9 KB)
- `planning\NOVAS_OVERCLAIMING_PREVENTION.md` (3.6 KB)
- `planning\OPUS_REVIEW_BRIEF.md` (27.5 KB)

---

## What's NOT Included

- PDF files including 14MB arxiv PDF (use `--include-pdf` to add)
- Other publication path content
- Large binary files

---

## Review Instructions

Please review this package for:

1. **Accuracy of claims** - Are statements supported by evidence?
2. **Clarity of presentation** - Is the writing clear and accessible?
3. **Completeness of evidence** - Are key findings documented?
4. **Suggested improvements** - What would strengthen the paper?

Return feedback to: `WHITE-PAPER/reviewers/from_reviewers/{reviewer}/`

---

*Package extracted from WHITE-PAPER/ for NeurIPS/AAAI Workshop submission review.*